sandbox/output
TicketDispenserTest.java:81: error: cannot find symbol
        TurnNumberSequence regularTurnNumberSequence = new TurnNumberSequenceRegular(2001);
                                                           ^
  symbol:   class TurnNumberSequenceRegular
  location: class TicketDispenserTest
1 error
